--- a/res/GCBugFix.ini
+++ b/res/GCBugFix.ini
@@ -1,7 +1,7 @@
 ;
 ; Papyrus VM garbage collector handling
 ;
-; All information will be logged to the F4SE logs folder in your documents. Papyrus script
+; All information will be logged to the SKSE logs folder in your documents. Papyrus script
 ; debugging/tracing should be enabled for maximum reliability.
 ;
 [GC]
@@ -11,7 +11,7 @@ LogFlushTime=5
 ; Log when specific GC passes begin and end along with their duration
 LogPasses=0
 
-; Log creation and destruction of various objects and struct instances
+; Log creation and destruction of various objects instances
 TraceVariables=0
 
 ; Patch the game bug itself
